...
                )}

                {/* Rodapé */}
                <View className="mt-4 flex-row gap-2">
                    <View className="flex-1">
                        <Button
                            title="Visualizar"
                            icon="eye-outline"
                            variant="secondary"
                            size="sm"
                            onPress={onPressView}
                        />
                    </View>
...
